[gd_scene load_steps=14 format=1]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://imgs/menumobil.png" type="Texture" id=2]
[ext_resource path="res://imgs/menucar.png" type="Texture" id=3]
[ext_resource path="res://imgs/menuplaymobi.png" type="Texture" id=4]
[ext_resource path="res://imgs/cars.png" type="Texture" id=5]
[ext_resource path="res://imgs/menuexitmobil.png" type="Texture" id=6]
[ext_resource path="res://imgs/menusetmobil.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]

resource/name = "bagin"
length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite 2:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.1, 1.5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 289.862, 345.394 ), Vector2( 450.862, 342.394 ), Vector2( 410.862, 342.394 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("TextureButton:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("TextureButton1:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.3, 0.6 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/3/type = "value"
tracks/3/path = NodePath("TextureButton2:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.6, 0.9 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("TextureButton3:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0.9, 1.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/5/type = "value"
tracks/5/path = NodePath("TextureButton2:rect/rotation")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 1, 1.2, 1.4, 1.6, 1.8, 2 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 10.0, -6.0, 5.0, -3.0, 0.0 ] }

[sub_resource type="Animation" id=2]

resource/name = "carsover"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TextureButton1:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 491, 212 ), Vector2( 470, 212 ) ] }

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TextureButton2:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 539, 294 ), Vector2( 539, 311 ) ] }

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TextureButton:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 539, 130 ), Vector2( 539, 110 ) ] }

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TextureButton3:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 583, 212 ), Vector2( 597, 212 ) ] }

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 242, -17 ), Vector2( 0, -17 ) ] }

[node name="menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -17.0
margin/right = 40.0
margin/bottom = 23.0

[node name="Label" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 573.0
margin/top = 43.0
margin/right = 743.0
margin/bottom = 57.0
custom_colors/font_color = Color( 0.835938, 0, 0.333069, 1 )
text = "Control gas tyre front :   up"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 573.0
margin/top = 62.0
margin/right = 755.0
margin/bottom = 76.0
custom_colors/font_color = Color( 0.898438, 0, 0, 1 )
text = "Control gas tyre back :   right"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 574.0
margin/top = 79.0
margin/right = 769.0
margin/bottom = 93.0
custom_colors/font_color = Color( 0, 0.305481, 0.601563, 1 )
text = "Control break             :   left"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 573.0
margin/top = 96.0
margin/right = 771.0
margin/bottom = 110.0
custom_colors/font_color = Color( 0.0351563, 0.28125, 0, 1 )
text = "to Menu                     :   escape"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 403.834, 239.168 )
z/z = -11
texture = ExtResource( 2 )

[node name="Sprite 2" type="Sprite" parent="."]

transform/pos = Vector2( 410.862, 342.394 )
transform/rot = 2.98211
texture = ExtResource( 3 )
flip_h = true

[node name="TextureButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 539.0
margin/top = 130.0
margin/right = 629.0
margin/bottom = 234.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )

[node name="TextureButton1" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 491.0
margin/top = 212.0
margin/right = 581.0
margin/bottom = 316.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 539.0
margin/top = 294.0
margin/right = 629.0
margin/bottom = 398.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )

[node name="TextureButton3" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 583.0
margin/top = 212.0
margin/right = 685.0
margin/bottom = 316.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/bagin = SubResource( 1 )
anims/carsover = SubResource( 2 )
anims/exitover = SubResource( 3 )
anims/playover = SubResource( 4 )
anims/setover = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="AnimationPlayer 2" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/cara = SubResource( 6 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[node name="Label" type="Label" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 369.0
margin/top = 395.0
margin/right = 430.0
margin/bottom = 409.0
text = "Loading..."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="exit_tree" from="." to="." method="_on_menu_exit_tree"]

[connection signal="mouse_enter" from="TextureButton" to="." method="_on_TextureButton_mouse_enter"]

[connection signal="mouse_exit" from="TextureButton" to="." method="_on_TextureButton_mouse_exit"]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="TextureButton1" to="." method="_on_TextureButton1_pressed"]

[connection signal="mouse_enter" from="TextureButton2" to="." method="_on_TextureButton2_mouse_enter"]

[connection signal="mouse_exit" from="TextureButton2" to="." method="_on_TextureButton2_mouse_exit"]

[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]

[connection signal="mouse_enter" from="TextureButton3" to="." method="_on_TextureButton3_mouse_enter"]

[connection signal="mouse_exit" from="TextureButton3" to="." method="_on_TextureButton3_mouse_exit"]

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]

[connection signal="finished" from="AnimationPlayer 2" to="." method="_on_AnimationPlayer_2_finished"]


